Bug 171484 - Filtering by sub-category in the to-do's does not work
Summary: Filtering by sub-category in the to-do's does not work
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: todoview (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 207453 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-09-23 00:38 UTC by Stephen Ostrow
Modified: 2010-06-13 22:11 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stephen Ostrow 2008-09-23 00:38:03 UTC
Version:           4.1.0  (using KDE 4.1.1)
OS:                Linux
Installed from:    Ubuntu Packages

In the To-Do listing view you are able to filter to-do's by category. This works fine and is great. However, when I try to filter by a sub-category no to-dos are listed even though there are to-dos which are part of that sub-category.
Comment 1 Michael Tils 2008-10-02 00:53:35 UTC
I can confirm this. I use SUSE RPMs and if I choose a subvategory there are no todos shown. 
Comment 2 Christophe Marin 2008-11-23 02:13:33 UTC
Confirmed in trunk (rev. 887816)
Comment 3 Fred Duval 2009-02-28 15:29:50 UTC
Confirming.

KOrganizer 4.1.4
Ubuntu Intrepid Ibex 8.10
Comment 4 Bastiaan Hovestreydt 2009-05-24 16:12:28 UTC
It looks as if the problem has its roots in the way the subcategories are stored. The right way seems to be "Category:Subcategory" and this is what appears in the ics file, when you use the edit window or the context menu to set the category. However if you single click on the category to set it, "  Subcategory" appears in the ics file. The Filter works only for these kind of entries, but they are ambiguous.


Version 4.2.2
Comment 5 Sergio Martins 2009-05-24 17:53:21 UTC
It gets worse, imagine you have these categories:

Parent1
 |
 --Son1

Parent2
 |
 --Son1

and read an ics file that says CATEGORIES:Son1, how do you know which is the correct parent?
Comment 6 Christophe Marin 2009-09-16 12:19:32 UTC
*** Bug 207453 has been marked as a duplicate of this bug. ***
Comment 7 Hector Martin 2009-09-26 19:09:17 UTC
But the categories are already stored right (prefixed by the parent). This appears to just be a bug in the selector. It uses the literal text of the option (subcategory prefixed by some spaces) instead of the correct Category:Subcategory format.
Comment 8 Hector Martin 2009-09-26 19:11:23 UTC
Oh, wait, I see what you mean. Yes, subcategories are also stored wrong if you use the multi-subcategory selector in the Todo view (click the little arrow). It works fine when you select them in the main editor, as well as when you right click. So it's a bug in both the filter multi-selector and the in-line table view multi-selector, which I'd assume both use the same code and widget.
Comment 9 Ron W. II 2009-11-17 15:28:50 UTC
This bug still exists in version 4.3.3. Just tested it out this morning.
Comment 10 Patrick Callahan 2010-02-22 20:33:42 UTC
Bug still exists in 4.4.0, just tested now.
Comment 11 Ralph Navarro 2010-06-10 17:11:20 UTC
Bug still exists in 4.4.2.

Age of Bug is 8+ months.  Is anyone working on this?  What can be done to move this along?
Comment 12 Sergio Martins 2010-06-13 21:59:08 UTC
SVN commit 1137634 by smartins:

Keep the real sub-category in the UserRole so we can use it for filtering.

MERGE: trunk, e35?

BUG: 171484


 M  +6 -4      categoryhierarchyreader.cpp  
 M  +5 -3      categoryhierarchyreader.h  
 M  +1 -1      kcheckcombobox.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1137634
Comment 13 Sergio Martins 2010-06-13 22:11:23 UTC
SVN commit 1137641 by smartins:

Fwd port commit 1137634 by smartins from branch 4.4 to trunk:

Keep the real sub-category in the UserRole so we can use it for filtering.

MERGE: none ( no sub-categories in enterprise )

CCBUG: 171484


 M  +6 -4      incidenceeditors/categoryhierarchyreader.cpp  
 M  +5 -3      incidenceeditors/categoryhierarchyreader.h  
 M  +1 -1      korganizer/kcheckcombobox.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1137641