Keep the real sub-category in the UserRole so we can use it for filtering.

MERGE: trunk, e35?

BUG: 171484

svn path=/branches/KDE/4.4/kdepim/; revision=1137634